<?xml version="1.0"?>
<package format="2">
    <name>car_slam</name>
    <version>0.0.1</version>
    <description>The car_slam package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <maintainer email="pengys@apache.org">Peng-YongSheng</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>cartographer_ros</exec_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
</package>